MB-61238: Ensure that checkpoint_computed_max_size is correctly set

In the case where we compute a checkpoint_computed_max_size that is
greater than flush_batch_max_bytes, then we need to cap it to
flush_batch_max_bytes, not leave checkpoint_computed_max_size to its
previous value.

The checkpoint_computed_max_size might be left to invalid values
otherwise, eg 0. That would cause subsequent failures in the code, like
the exception observed in MB-61238.

Change-Id: I511bf1e6c01ce31186d7b3093f5e3b577ef4a4c8
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/207507
Well-Formed: Restriction Checker
Reviewed-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Tested-by: Paolo Cocchi <paolo.cocchi@couchbase.com>